--- a/primo_progetto/deployment.html
+++ b/primo_progetto/deployment.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Tutorial deployment</title>
+    <style>
+        body {
+            background-color: lightgoldenrodyellow;
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 0;
+        }
+
+        h1 {
+            color: darkred;
+            font-size: 28px;
+            margin: 20px 0;
+        }
+
+        ol {
+            list-style-type: decimal;
+            margin-left: 20px;
+        }
+
+        li {
+            font-size: 16px;
+            margin: 10px 0;
+        }
+
+        strong {
+            font-weight: bold;
+        }
+
+        ol > li {
+            margin: 15px 0;
+        }
+    </style>
 </head>
 <body>
     <h1>Come fare il deployment di un oggetto da Phpstorm.</h1>
