pagina che gestisce i progetti

--- a/home/index.html
+++ b/home/index.html
@@ -15,9 +15,10 @@
             <h3 class="w3-padding-64"><b style="font-size:40px">Progetti</b></h3>
         </div>
         <div class="w3-bar-block">
-            <p style="font-size:16px"><a href="prove/indexes.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ HTML</a></p>
-            <p style="font-size:16px"><a href="prove/css.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ CSS</a></p>
-            <p style="font-size:16px"><a href="prove/deployment.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Tutorial deployment</a></p>
+            <p style="font-size:16px"><a href="introduzione/indexes.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ HTML</a></p>
+            <p style="font-size:16px"><a href="introduzione/css.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ CSS</a></p>
+            <p style="font-size:16px"><a href="introduzione/deployment.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Tutorial deployment</a></p>
+            <p style="font-size:16px"><a href="introduzione/biblioteca.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  ER Biblioteca</a></p>
         </div>
     </nav>
     <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
