--- a/home/index.html
+++ b/home/index.html
@@ -15,10 +15,13 @@
             <h3 class="w3-padding-64"><b style="font-size:40px">Progetti</b></h3>
         </div>
         <div class="w3-bar-block">
-            <p style="font-size:16px"><a href="introduzione/indexes.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ HTML</a></p>
-            <p style="font-size:16px"><a href="introduzione/css.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ CSS</a></p>
+            <p style="font-size:16px"><a href="introduzione/index.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ HTML</a></p>
+            <p style="font-size:16px"><a href="css/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ CSS</a></p>
             <p style="font-size:16px"><a href="introduzione/deployment.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Tutorial deployment</a></p>
-            <p style="font-size:16px"><a href="introduzione/biblioteca.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  ER Biblioteca</a></p>
+            <p style="font-size:16px"><a href="biblioteca/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  ER Biblioteca</a></p>
+            <p style="font-size:16px"><a href="moltiplicatore/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Moltiplicatore</a></p>
+            <p style="font-size:16px"><a href="resistenze/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Calcolo resistenze</a></p>
+            <p style="font-size:16px"><a href="hamming/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Distanza di hamming</a></p>
         </div>
     </nav>
     <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
@@ -35,7 +38,7 @@
             <hr style="width:50px;border:5px solid red" class="w3-round">
         </div>
 
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-large" style="margin-top: 278px">
+        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-large" style="margin-top: 270px">
             <a href="https://github.com/MattiaCorradini" target="_blank"><i class="fa fa-github w3-hover-opacity" style="font-size: 28px;"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100058196511914&locale=it_IT" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity" style="font-size: 28px;"></i></a>
             <a href="https://www.instagram.com/_mattia_corradini_/" target="_blank"><i class="fa fa-instagram w3-hover-opacity" style="font-size: 28px;"></i></a>
