Pagina che gestisce i progetti

--- a/home/index.html
+++ b/home/index.html
@@ -12,33 +12,38 @@
     <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:34px">Close Menu</a>
         <div class="w3-container" style="margin-top:0">
-            <h3 class="w3-padding-64"><b style="font-size:40px">Progetti</b></h3>
+            <h3 class="w3-padding-64"><b style="font-size:40px">Cartelle</b></h3>
         </div>
         <div class="w3-bar-block">
-            <p style="font-size:16px"><a href="introduzione/index.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ HTML</a></p>
-            <p style="font-size:16px"><a href="css/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione ⇨ CSS</a></p>
-            <p style="font-size:16px"><a href="introduzione/deployment.html" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Tutorial deployment</a></p>
-            <p style="font-size:16px"><a href="biblioteca/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  ER Biblioteca</a></p>
-            <p style="font-size:16px"><a href="moltiplicatore/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Moltiplicatore</a></p>
-            <p style="font-size:16px"><a href="resistenze/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Calcolo resistenze</a></p>
-            <p style="font-size:16px"><a href="hamming/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Distanza di hamming</a></p>
+            <p style="font-size:16px"><a href="introduzione.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione HTML e CSS</a></p>
+            <p style="font-size:16px"><a href="introphp.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione PHP</a></p>
+            <p style="font-size:16px"><a href="db.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Introduzione DB</a></p>
         </div>
     </nav>
     <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
         <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-        <span>Progetti</span>
+        <span>Cartelle</span>
     </header>
     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
     <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
-        <div class="w3-container" style="margin-top:20px" id="showcase" >
+        <div class="w3-container" style="margin-top:10px" id="showcase" >
             <h1 class="w3-jumbo"><b>Corradini's portfolio</b></h1>
             <hr style="width:50px;border:5px solid red" class="w3-round">
-            <p>In questa pagina possiamo trovare elencati di lato tutti i progetti che andrò a svolgere nel corso del 5° anno nella sezione progetti.</p>
+            <p>In questa pagina possiamo trovare elencati di lato tutti i progetti che andrò a svolgere nel corso del 5° anno nella sezione "cartelle".</p>
             <hr style="width:50px;border:5px solid red" class="w3-round">
+            <h3 class="w3-xlarge"><b>È consigliabile l'ascolto di questa canzone durante la navigazione</b></h3>
         </div>
 
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-large" style="margin-top: 270px">
+        <div style="display: flex; justify-content: center; margin-top: 15px">
+            <iframe width="500" height="255" src="https://www.youtube.com/embed/k4zJ2wLR12I?si=UCzn0QEncxuvUe4X"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+            </iframe>
+        </div>
+
+        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-large" style="margin-top: -40px">
             <a href="https://github.com/MattiaCorradini" target="_blank"><i class="fa fa-github w3-hover-opacity" style="font-size: 28px;"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100058196511914&locale=it_IT" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity" style="font-size: 28px;"></i></a>
             <a href="https://www.instagram.com/_mattia_corradini_/" target="_blank"><i class="fa fa-instagram w3-hover-opacity" style="font-size: 28px;"></i></a>
