Pagina che gestisce i progetti

--- a/home/db.html
+++ b/home/db.html
@@ -21,7 +21,8 @@
                 🢪 Back to the home
             </a>
         </p>
-        <p style="font-size:16px"><a href="pdo/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Studenti</a></p>
+        <p style="font-size:16px"><a href="_pdo/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  Studenti</a></p>
+        <p style="font-size:16px"><a href="world/" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">●  DB World</a></p>
         </div>
 </nav>
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
